@@ -1,10 +1,8 @@
-package jp.splitfile;
+package jp.report;
 
 import java.io.IOException;
 import java.nio.file.FileSystems;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardWatchEventKinds;
 import java.nio.file.WatchEvent;
 import java.nio.file.WatchKey;
@@ -16,13 +14,13 @@ public class FileWatcher {
 
     private WatchService watchService;
     private Path watchPath;
-    private BlockingQueue<Task> taskQueue;
+    private BlockingQueue<PdfTask> taskQueue;
     private Thread watcherThread;
     private volatile boolean isRunning = false;
 
-    public FileWatcher(String directoryPath, BlockingQueue<Task> taskQueue) {
+    public FileWatcher(String directoryPath, BlockingQueue<PdfTask> taskQueue) {
         this.taskQueue = taskQueue;
-        this.watchPath = Paths.get(directoryPath);
+        this.watchPath = Path.of(directoryPath);
         try {
             this.watchService = FileSystems.getDefault().newWatchService();
             this.watchPath.register(this.watchService, java.nio.file.StandardWatchEventKinds.ENTRY_CREATE);
@@ -41,8 +39,8 @@ public class FileWatcher {
             return;
         }
 
-        isRunning = true;
-        watcherThread = new Thread(this::watchLoop);
+        isRunning  = true;
+        watcherThread = new Thread(this::watchloop);
         watcherThread.setName("FileWatcher-Thread");
         watcherThread.start();
     }
@@ -67,38 +65,32 @@ public class FileWatcher {
         }
     }
 
-    private void watchLoop() {
+    private void watchloop() {
         while (isRunning && !Thread.currentThread().isInterrupted()) {
             WatchKey key = null;
             try {
                 System.out.println("ファイル監視中...");
                 key = watchService.poll(10, TimeUnit.SECONDS);
                 if (key != null) {
-
                     // ファイルが完全に書き込まれるまで待機
                     Thread.sleep(1000);
 
                     for (WatchEvent<?> event : key.pollEvents()) {
                         if (event.kind() == StandardWatchEventKinds.ENTRY_CREATE) {
                             String fileName = event.context().toString();
-                            // end.txtが作成されたら監視停止
                             if ("end.txt".equals(fileName)) {
+                                // end.txtが作成されたら監視停止
                                 stop();
                                 break;
                             }
 
                             // 新しいファイルが作成されたらTaskをキューに追加
-                            Task task = createTask(fileName);
-                            if (task != null) {
-                                taskQueue.add(task);
-                            }
+                            Path csvPath = watchPath.resolve(fileName);
+                            PdfTask task = new PdfTask(csvPath);
+                            taskQueue.add(task);
                         }
                     }
                 }
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-                Thread.currentThread().interrupt();
-                break;
             } catch (Exception e) {
                 e.printStackTrace();
                 stop();
@@ -113,30 +105,6 @@ public class FileWatcher {
                     }
                 }
             }
-        }
-    }
-
-    private Task createTask(String fileName) throws IOException {
-
-        if (!fileName.endsWith(".trigger")) {
-            // トリガーファイル以外（CSVファイル）は無視
-            return null;
-        }
-        // トリガーファイルを削除
-        Files.deleteIfExists(watchPath.resolve(fileName));
-        System.out.println("トリガーファイル検知：" + fileName + " また、トリガーファイルを削除しました。");
-
-        // 対応するCSVファイルのパスを生成
-        Path csvPath = watchPath.resolve(fileName.replace(".trigger", ".csv"));
-
-        // タスク生成
-        if (fileName.startsWith("data-a1")) {
-            return new TaskA1(csvPath);
-        } else if (fileName.startsWith("data-b1")) {
-            return new TaskB1(csvPath);
-        } else {
-            System.out.println("Unknown file type: " + fileName);
-            return null;
         }
     }
 }
